# fate

./: .gitignore  Cargo.toml  compile_shader_and_run_win.bat  output.ppm
crates/fate_graphic/: Cargo.toml
crates/fate_graphic/src/: aabb.rs  buffer.rs  camera.rs  cubemap.rs  descriptors.rs  device.rs  frame_buffer.rs  input_system.rs  lib.rs  light.rs  material.rs  mesh.rs  mikktspace.rs  model.rs  node.rs  pipeline.rs  render_pass.rs  shader.rs  skybox.rs  swapchain.rs  texture.rs  tools.rs  transform.rs  uniform_buffer.rs  vertex.rs
crates/fate_renderer/: Cargo.toml
crates/fate_renderer/shaders/: brdf_lookup.frag  cubemap.vert  downsample.frag  final.frag  final.frag.spv  fxaa.frag  fxaa.frag.spv  gbuffer.frag  irradiance.frag  model.frag  model.frag.spv  model.vert  model.vert.spv  pre_filtered.frag  shadowcaster.frag  shadowcaster.frag.spv  shadowcaster.vert  shadowcaster.vert.spv  ssao.frag  ssao.frag.spv  upsample.frag
crates/fate_renderer/src/: camera.rs  config.rs  gui.rs  inputsystem.rs  loader.rs  main.rs  transform.rs
crates/fate_renderer/src/renderer/: attachments.rs  fxaa.rs  mod.rs  skybox.rs  ssao.rs
crates/fate_renderer/src/renderer/model/: gbufferpass.rs  lightpass.rs  mod.rs  shadowcasterpass.rs  uniform.rs
crates/fate_renderer/src/renderer/postprocess/: bloom.rs  blurpass.rs  finalpass.rs
crates/fate_rt/: Cargo.toml
crates/fate_rt/src/: aabb.rs  bvh.rs  camera.rs  constant_medium.rs  hit.rs  hittable_list.rs  image.rs  interval.rs  lib.rs  light.rs  material.rs  mesh.rs  mikktspace.rs  model.rs  onb.rs  pbr_material.rs  pdf.rs  quad.rs  ray.rs  renderer.rs  scene.rs  sphere.rs  texture.rs  transform.rs  triangle.rs  utils.rs
crates/libs/application/: Cargo.toml
crates/libs/application/src/: application.rs  lib.rs  main_schedule.rs
crates/libs/asset/: Cargo.toml
crates/libs/asset/src/: asset.rs  asset_loader.rs  asset_mgr.rs  handle.rs  lib.rs
crates/libs/audio/: Cargo.toml
crates/libs/audio/examples/: audio_example.rs
crates/libs/audio/src/: audio_player.rs  audio_source.rs  lib.rs
crates/libs/ecs/: Cargo.toml
crates/libs/ecs/example/: example.rs
crates/libs/ecs/examples/: ecs_example.rs  example.rs
crates/libs/gltf_loader/: Cargo.toml
crates/libs/gltf_loader/src/: lib.rs  mesh.rs  mikktspace.rs  model.rs
crates/libs/rendering/: Cargo.toml
crates/libs/rendering/src/: aabb.rs  animation.rs  brdf.rs  cubemap.rs  environment.rs  error.rs  hdr_loader.rs  irradiance.rs  lib.rs  light.rs  material.rs  math.rs  mesh.rs  metadata.rs  mikktspace.rs  model.rs  node.rs  pre_filtered.rs  skin.rs  texture.rs  transform.rs  util.rs
crates/libs/resource/: Cargo.toml
crates/libs/resource/examples/: resource_example.rs
crates/libs/resource/src/: handle.rs  lib.rs  resource.rs  resource_loader.rs  resource_mgr.rs
crates/libs/scene/: Cargo.toml
crates/libs/scene/examples/: scene_example.rs
crates/libs/scene/src/: camera.rs  children.rs  component.rs  culling.rs  frustum.rs  hierarchy.rs  lib.rs  mesh_renderer.rs  parent.rs  scene.rs  scene_tree.rs  test_tree.rs  transform.rs
crates/libs/vulkan/: Cargo.toml
crates/libs/vulkan/src/: buffer.rs  debug.rs  image.rs  lib.rs  pipeline.rs  shader.rs  swapchain.rs  texture.rs  util.rs
crates/libs/vulkan/src/context/: mod.rs  shared.rs
graphic/: Cargo.toml
graphic/src/: buffer.rs  device.rs  framebuffer.rs  lib.rs  model.rs  render_pass.rs  shader.rs  swapchain.rs  texture.rs  tools.rs
shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: app.rs  lib.rs  main.rs  model.rs
utils/: compile_shader.bat  compile_shader_mac.bat  compile_shader_win.bat
