[package]
name = "fate_graphic"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
cgmath = "0.18"
image = "0.21.0"
base64 = "0.11.0"
png = "0.17"
pretty_env_logger = "0.4"
thiserror = "1"
tobj = { version = "3", features = ["log"] }
vulkanalia = { version = "=0.22.0", features = ["libloading", "provisional", "window"] }
winit = "0.28"

[dependencies.gltf]
version = "1.2"