[package]
name = "fate_renderer"
version.workspace = true
edition.workspace = true

[dependencies]
vulkan.workspace = true
rendering.workspace = true
scene.workspace = true
asset.workspace = true
audio.workspace = true
application.workspace = true
gltf_loader.workspace = true
bevy_ecs = "0.13.2"
glam = { version = "0.27", features = ["approx"] }

log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_yaml.workspace = true
clap.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-ash-renderer.workspace = true
