[package]
name = "fate_rt"
version.workspace = true
edition = "2021"

[dependencies]
fate_graphic = { path = "../fate_graphic", version = "0.1.0" }
anyhow = "1"
cgmath = "0.18"
image = "0.24.8"
base64 = "0.11.0"
rand = "*"
rayon = "1.8.1"
stb_image = "0.2"
tobj = { version = "3", features = ["log"] }
mikktspace = "0.3.0"

[dependencies.gltf]
version = "1.2"