[package]
name = "audio"
version = "0.0.1"
edition.workspace = true

[[example]]
name = "audio_example"
path = "examples/audio_example.rs"

[dependencies]
asset = { path = "../asset", version = "0.0.1" }
rodio = { version = "0.18.1", default-features = false }

[features]
default = ["flac", "vorbis", "wav", "mp3"]

mp3 = ["rodio/mp3"]
flac = ["rodio/flac"]
wav = ["rodio/wav"]
vorbis = ["rodio/vorbis"]
minimp3 = ["rodio/minimp3"]
symphonia-aac = ["rodio/symphonia-aac"]
symphonia-all = ["rodio/symphonia-all"]
symphonia-flac = ["rodio/symphonia-flac"]
symphonia-isomp4 = ["rodio/symphonia-isomp4"]
symphonia-vorbis = ["rodio/symphonia-vorbis"]
symphonia-wav = ["rodio/symphonia-wav"]