[package]
name = "rendering"
version.workspace = true
edition.workspace = true

[dependencies]
resource = { path = "../resource", version = "0.0.1" }
log.workspace = true
image.workspace = true
vulkan.workspace = true
cgmath.workspace = true
rand.workspace = true
lerp.workspace = true
byteorder.workspace = true
mikktspace.workspace = true

[dependencies.gltf]
workspace = true
features = [
    "KHR_lights_punctual",
    "KHR_materials_unlit",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_emissive_strength",
]
