[package]
name = "scene"
version.workspace = true
edition.workspace = true

[[example]]
name = "scene_example"
path = "examples/scene_example.rs"

[dependencies]
bevy_ecs = "0.13.2"
glam = { version = "0.27", features = ["approx"] }
smallvec = { version = "1.11", features = ["union", "const_generics"] }
